# coq-cheri-capabilities

./: .gitignore  CoqMakefile.conf  README.md  _CoqProject  capabilities.opam  coq-cheri-capabilities.opam  dune  dune-project
.github/workflows/: ci.yml
lib/: dune
test/: dune
theories/: dune
theories/Common/: Capabilities.v  Utils.v  dune
theories/Morello/: Bv_extensions.v  CapFns.v  CapFnsTypes.v  Capabilities.v  Lemmas.v  Morello.v  MorelloTests.v  dune
theories/Morello/CapFns/: CapFns.v  CapFnsTypes.v  CapFnsTypes_Sail_gen.v  CapFns_Sail_gen.v  dune  equivalence.v
